==> bimanpaulsamsung/st-device-sdk-c-ref/apps/xmc4800/switch_example/main/device_control.c <==
/* ***************************************************************************
 *
 * Copyright 2020 Samsung Electronics All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
 * either express or implied. See the License for the specific
 * language governing permissions and limitations under the License.
 *
 ****************************************************************************/

#include "device_control.h"

#include "FreeRTOS.h"
#include "queue.h"
#include "task.h"
#include "xmc_gpio.h"
#include "xmc4_gpio.h"

void change_switch_state(int switch_state)
{
    if (switch_state == SWITCH_OFF) {
        XMC_GPIO_SetOutputLow(GPIO_OUTPUT_MAINLED_PORT, GPIO_OUTPUT_MAINLED);
    } else {
        XMC_GPIO_SetOutputHigh(GPIO_OUTPUT_MAINLED_PORT, GPIO_OUTPUT_MAINLED);
    }
}

int get_button_event(int* button_event_type, int* button_event_count)
{
    static uint32_t button_count = 0;
    static uint32_t button_last_state = BUTTON_GPIO_RELEASED;
    static TimeOut_t button_timeout;
    static TickType_t long_press_tick = pdMS_TO_TICKS(BUTTON_LONG_THRESHOLD_MS);
    static TickType_t button_delay_tick = pdMS_TO_TICKS(BUTTON_DELAY_MS);

    uint32_t gpio_level = 0;

    gpio_level = XMC_GPIO_GetInput(GPIO_INPUT_BUTTON_PORT, GPIO_INPUT_BUTTON);
    if (button_last_state != gpio_level) {
        /* wait debounce time to ignore small ripple of currunt */
        vTaskDelay( pdMS_TO_TICKS(BUTTON_DEBOUNCE_TIME_MS) );
        gpio_level = XMC_GPIO_GetInput(GPIO_INPUT_BUTTON_PORT, GPIO_INPUT_BUTTON);
        if (button_last_state != gpio_level) {
            printf("Button event, val: %d, tick: %u\n", gpio_level, (uint32_t)xTaskGetTickCount());
            button_last_state = gpio_level;
            if (gpio_level == BUTTON_GPIO_PRESSED) {
                button_count++;
            }
            vTaskSetTimeOutState(&button_timeout);
            button_delay_tick = pdMS_TO_TICKS(BUTTON_DELAY_MS);
            long_press_tick = pdMS_TO_TICKS(BUTTON_LONG_THRESHOLD_MS);
        }
    } else if (button_count > 0) {
        if ((gpio_level == BUTTON_GPIO_PRESSED)
                && (xTaskCheckForTimeOut(&button_timeout, &long_press_tick ) != pdFALSE)) {
            *button_event_type = BUTTON_LONG_PRESS;
            *button_event_count = 1;
            button_count = 0;
            return true;
        } else if ((gpio_level == BUTTON_GPIO_RELEASED)
                && (xTaskCheckForTimeOut(&button_timeout, &button_delay_tick ) != pdFALSE)) {
            *button_event_type = BUTTON_SHORT_PRESS;
            *button_event_count = button_count;
            button_count = 0;
            return true;
        }
    }
    return false;
}

void led_blink(int switch_state, int delay, int count)
{
    for (int i = 0; i < count; i++) {
        vTaskDelay(delay / portTICK_PERIOD_MS);
        change_switch_state(1 - switch_state);
        vTaskDelay(delay / portTICK_PERIOD_MS);
        change_switch_state(switch_state);
    }
}

void change_led_mode(int noti_led_mode)
{
    static TimeOut_t led_timeout;
    static TickType_t led_tick = -1;
    static int last_led_mode = -1;
    static int led_state = SWITCH_OFF;

    if (last_led_mode != noti_led_mode) {
        last_led_mode = noti_led_mode;
        vTaskSetTimeOutState(&led_timeout);
        led_tick = 0;
    }

    switch (noti_led_mode) {
        case LED_ANIMATION_MODE_IDLE:
            break;
        case LED_ANIMATION_MODE_SLOW:
            if (xTaskCheckForTimeOut(&led_timeout, &led_tick ) != pdFALSE) {
                led_state = 1 - led_state;
                change_switch_state(led_state);
                vTaskSetTimeOutState(&led_timeout);
                if (led_state == SWITCH_ON) {
                    led_tick = pdMS_TO_TICKS(200);
                } else {
                    led_tick = pdMS_TO_TICKS(800);
                }
            }
            break;
        case LED_ANIMATION_MODE_FAST:
            if (xTaskCheckForTimeOut(&led_timeout, &led_tick ) != pdFALSE) {
                led_state = 1 - led_state;
                change_switch_state(led_state);
                vTaskSetTimeOutState(&led_timeout);
                led_tick = pdMS_TO_TICKS(100);
            }
            break;
        default:
            break;
    }
}

void iot_gpio_init(void)
{
    XMC_GPIO_CONFIG_t gpio_config;
    XMC_GPIO_HWCTRL_t gpio_hwctrl;

    /* Button */
    gpio_config.mode = XMC_GPIO_MODE_INPUT_PULL_UP;
    gpio_hwctrl = XMC_GPIO_HWCTRL_DISABLED;
    XMC_GPIO_Init(GPIO_INPUT_BUTTON_PORT, GPIO_INPUT_BUTTON, &gpio_config);
    XMC_GPIO_SetHardwareControl(GPIO_INPUT_BUTTON_PORT, GPIO_INPUT_BUTTON, gpio_hwctrl);

    /* LED */
    gpio_config.mode = XMC_GPIO_MODE_OUTPUT_PUSH_PULL;
    gpio_config.output_level = XMC_GPIO_OUTPUT_LEVEL_LOW;
    gpio_hwctrl = XMC_GPIO_HWCTRL_DISABLED;
    XMC_GPIO_Init(GPIO_OUTPUT_MAINLED_PORT, GPIO_OUTPUT_MAINLED, &gpio_config);
    XMC_GPIO_SetHardwareControl(GPIO_OUTPUT_MAINLED_PORT, GPIO_OUTPUT_MAINLED, gpio_hwctrl);

    XMC_GPIO_SetOutputHigh(GPIO_OUTPUT_MAINLED_PORT, GPIO_OUTPUT_MAINLED);
}
